Adaptation de la page index + rajout de la photo dans index et cv

--- a/css/cv.css
+++ b/css/cv.css
@@ -27,6 +27,8 @@ body {
     width: 160px;
     height: 160px;
     border-radius: 50%;
+    object-fit: cover;
+    
 }
 #cv-intro h1 {
     margin: 0;
