--- a/css/realisations.css
+++ b/css/realisations.css
@@ -14,6 +14,11 @@
 .jumbotron {
     margin-bottom: 0px;
 }
+.card .card-img-top {
+    width: 100%;
+    height: 300px;
+    object-fit: cover;
+}
 .card .card-img-top:hover {
     cursor: pointer;
 }
